--- a/angular/src/app/tenant/dashboard.tpl.html
+++ b/angular/src/app/tenant/dashboard.tpl.html
@@ -73,15 +73,17 @@
                   <a href="#/property/{{property.$id}}" class="btn btn-rented">See More</a>
                </div>
            </div>
-           <h5 class="top-buffer">Savings</h5>
+            <!-- Placeholder for savings data -->
+           <!--h5 class="top-buffer">Savings</h5>
            <div class="row savings">
             <div class="col-sm-12">
                <img src="assets/img/savings.png">
             </div>
-           </div>
+           </div-->
         </div>
 
-        <div class="col-sm-3 inbox">
+        <!-- Placeholder for inbox -->
+        <!--div class="col-sm-3 inbox">
            <h5>Inbox</h5>
 
                
@@ -143,11 +145,11 @@
            </div>
 
 
-        </div>
+        </div-->
     </div>
 
     <div class="row top-buffer">
-        <div class="col-sm-9">
+        <!--div class="col-sm-9">
            <h5>Expenses</h5>
 
            <div class="row expenses">
@@ -178,8 +180,8 @@
                  <p>Occupancy Rate</p>
               </div>
            </div>
-        </div>
-        <div class="col-sm-3 calendar">
+        </div-->
+        <div class="col-sm-3 col-sm-offset-9 calendar">
            <h5>Calendar</h5>
            <div class="row">
              <div id="mini-clndr" class="col-sm-12">
