--- a/angular/src/app/tenant/partials/menu-tenant.tpl.html
+++ b/angular/src/app/tenant/partials/menu-tenant.tpl.html
@@ -4,5 +4,6 @@
        <li><a href="#/tenants/dashboard" ng-class="isActive('/tenants/dashboard')">My Dashboard</a></li>
        <li><a href="#/tenants/properties" ng-class="isActive('/tenants/properties')">My Properties</a></li>
        <li><a href="#/tenants/myprofile" ng-class="isActive('/tenants/myprofile')">My Profile</a></li>
+       <li><a href="#/tenants/invite-owner" ng-class="isActive('/tenants/invite-owner')">Invite Owner</a></li>
     </ul>
 </div>
