--- a/angular/src/app/tenant/partials/property-teaser.tpl.html
+++ b/angular/src/app/tenant/partials/property-teaser.tpl.html
@@ -3,4 +3,7 @@
 </div>
 <p><strong>Number of offers:</strong> {{property.bids.length}}</p>
 <p><strong>Best offer:</strong> {{property.bestOffer.rentAmount | rentCurrency }}</p>
-<p><strong>Move In Date:</strong> {{property.bestOffer.moveInDate | date:'MMM dd'}}</p>
+<p><strong>Move-in date:</strong> {{property.bestOffer.moveInDate | date:'MMM dd'}}</p>
+<!--
+<p><em>My offer:</em> {{property.bids.user.firstName}}</p>
+<p><em>My move-in date:</em> </p> -->
