Marketing message changes

--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -160,7 +160,7 @@
                <div class="form-group">
                    <label class="col-sm-7 control-label">Bedrooms</label>
                    <div class="col-sm-5">
-                      <select class="form-control input-lg" ng-model="property.bedrooms" required>
+                      <select class="form-control input-lg" ng-model="property.bedrooms" >
                           <option value="">Select...</option>
                           <option value="0">0</option>
                           <option value="1">1</option>
@@ -177,7 +177,7 @@
                <div class="form-group">
                    <label class="col-sm-7 control-label">Bathrooms</label>
                    <div class="col-sm-5">
-                      <select class="form-control input-lg" ng-model="property.bathrooms" required>
+                      <select class="form-control input-lg" ng-model="property.bathrooms" >
                           <option value="">Select...</option>
                           <option value="0">0</option>
                           <option value="0.5">0.5</option>
