--- a/angular/src/app/user/partials/registerform.tpl.html
+++ b/angular/src/app/user/partials/registerform.tpl.html
@@ -44,7 +44,7 @@
                         <select class="form-control input-lg" ng-model="data.profile">
                                <option value="">Select One</option>
                                <option value="tenant">Tenant</option>
-                               <option value="owner">Owner</option>
+                               <option value="owner">Owner/Manager</option>
                         </select>
                     </div>
                 </div>
