--- a/angular/src/app/owner/owners.tpl.html
+++ b/angular/src/app/owner/owners.tpl.html
@@ -20,7 +20,7 @@
 
             <div class="row vertical-buffer">
                     <div class="col-xs-12 text-center">
-                         <a href="#/register/owner" class="btn btn-rented" ng-hide="{{profile && profile.type == 'tenant'}}">Add Your Property</a>
+                         <a href="#/register/owner" class="btn btn-rented" ng-hide="{{profile && profile.type == 'tenant'}}">Add Your Property for Free</a>
                     </div>
             </div>
     </div>
@@ -34,9 +34,13 @@
                 <div class="row">
                     <img src="assets/img/features/owners/credit-report.png" class="col-sm-7 col-xs-12 img-responsive">
                     <ul class="col-sm-5 col-xs-12 list-unstyled">
-                       <li><a href="http://www.experian.com/connect/" target="_blank">Experian Connect</a> tenant credit checks</li>
+                       <li>Experian credit checks
+                           <ul class="col-xs-12 list-unstyled bottom-buffer">
+                               <li><em><small><a href="https://connect.experian.com/pdf/experian-credit-report-sample.pdf" target="_blank">View sample credit report</a></small></em></li>
+                           </ul>  
+                       </li>
                        <li>Includes public record filings (such as: bankruptcies, tax liens and evictions)</li>
-                       <li>View tenant preferences</li>
+                       <li>View tenant history and references</li>
                     </ul>
                 </div>
             </div>
@@ -70,7 +74,13 @@
                 <div class="row">
                     <img src="assets/img/features/owners/owner-dashboard.png" class="col-sm-7 col-xs-12 img-responsive">
                     <ul class="col-sm-5 col-xs-12 list-unstyled">
-                       <li>Pool of pre-qualified tenants</li>
+                       <li>Pool of pre-qualified tenants
+                           <ul class="col-xs-12 list-unstyled bottom-buffer">
+                               <li><em><small>Tenants fill out one application &amp; credit report</small></em></li>
+                               <li><em><small>View tenant credit report and application as soon as they make an offer</small></em></li>
+                               <li><em><small>Tenants can apply before or after they view the property</small></em></li>
+                           </ul>    
+                       </li>
                        <li>View and accept offers right away</li>
                        <li>Tenant follow-up &amp; retention</li>
                     </ul>
