--- a/angular/src/app/partials/home.tpl.html
+++ b/angular/src/app/partials/home.tpl.html
@@ -2,11 +2,11 @@
     <div class="container homepage-drawing">
         <div class="jumbotron" style="background-color: transparent; padding-left: 16px;">
            <h1>Rent Your Way</h1>
-           <h2>Easy and secure rental transactions</h2>
+           <h3><em>Private network for tenants and owners/managers</em></h3>
            <div class="row" style="margin-top: 30px;">
               <div class="col-lg-4 col-sm-5">
                   <h3>Tenants</h3>
-                  <a href="#/register/tenant" class="btn btn-rented" role="button">Create Your Profile</a>
+                  <a href="#/register/tenant" class="btn btn-rented" role="button">Create Your  Profile</a>
               </div>   
               <div class="col-lg-3 col-sm-3">
                   <h3>Owners/Managers</h3>
