--- a/angular/src/app/tenant/tenants.tpl.html
+++ b/angular/src/app/tenant/tenants.tpl.html
@@ -75,9 +75,9 @@
                     <ul class="col-sm-5 col-xs-12 list-unstyled">
                        <li>Select your property with confidence</li>
                        <li>Property owners and managers are verified eliminating scams</li>
-                       <li>Enhance your privacy and identity protection</li>
-                       <li>Your privacy is protected
+                       <li>Enhanced privacy and identity protection
                            <ul class="col-xs-12 list-unstyled bottom-buffer">
+                               <li><em><small>No more paper applications that have your private information</small></em></li>
                                <li><em><small>Our website uses 128-bit secure connection</small></em></li>
                                <li><em><small>You decide who can view your application and credit report</small></em></li>
                                <li><em><small>Your data is stored securely and never sold to anyone</small></em></li>
