--- a/angular/src/app/property/list.tpl.html
+++ b/angular/src/app/property/list.tpl.html
@@ -4,7 +4,7 @@
 
         <div class="row">
             <div class="col-sm-12">
-                <h3>Easy Rental Paperwork</h3> 
+                <h3>Renting Made Easy</h3> 
                 
                 <div class="col-sm-5 col-xs-12">
                     <ul>
@@ -29,6 +29,12 @@
         <div class="col-sm-12 property-list">
             
             <h3>Recent Properties</h3>
+            <div class="col-sm-12 col-xs-12 vertical-buffer">
+                <ul>
+                    <li>Property added by owners</li>
+                    <li>Offers made by tenants</li>
+                </ul>
+            </div>
 
             <div class="row property-row" ng-repeat="(id, property) in properties | loadProperty" ng-show="property.pictures.length">
                 <img ng-src="{{property.pictures[0]}}" class="col-md-7 col-xs-12 img-responsive">
