Updated owner marketing message

--- a/angular/src/app/owner/owners.tpl.html
+++ b/angular/src/app/owner/owners.tpl.html
@@ -6,7 +6,7 @@
             <div class="row">
                     <div class="col-sm-4 col-md-4 col-lg-4 feature-icon">
                          <img src="assets/img/features/owners/tenant-screening.gif" class="center-block">
-                         <h4 class="text-center">Easy Tenant Screening</h4>
+                         <h4 class="text-center">Reduce Paperwork + Easy Tenant Screening</h4>
                     </div>
                     <div class="col-sm-4 col-md-4 col-lg-4 feature-icon">
                          <img src="assets/img/features/owners/multiple-offers.gif" class="center-block">
@@ -30,17 +30,23 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h4>Easy Tenant Screening</h4>
+                <h4>Reduce Paperwork + Easy Tenant Screening</h4>
                 <div class="row">
                     <img src="assets/img/features/owners/credit-report.png" class="col-sm-7 col-xs-12 img-responsive">
                     <ul class="col-sm-5 col-xs-12 list-unstyled">
-                       <li>Experian credit checks
+                       <li>Tenants complete application online
                            <ul class="col-xs-12 list-unstyled bottom-buffer">
+                               <li><em><small>View tenant history and references</small></em></li>
+                               <li><em><small>Paper applications available in our Document Center</small></em></li>
+                           </ul> 
+                       </li>
+                        <li>Experian credit checks
+                           <ul class="col-xs-12 list-unstyled bottom-buffer">
+                               <li><em><small>Identity and credit check done online</small></em></li>
+                               <li><em><small>Includes public record filings (such as: bankruptcies, tax liens and evictions)</small></em></li>
                                <li><em><small><a href="https://connect.experian.com/pdf/experian-credit-report-sample.pdf" target="_blank">View sample credit report</a></small></em></li>
                            </ul>  
                        </li>
-                       <li>Includes public record filings (such as: bankruptcies, tax liens and evictions)</li>
-                       <li>View tenant history and references</li>
                     </ul>
                 </div>
             </div>
