--- a/angular/src/app/tenant/partials/profile-page-1.tpl.html
+++ b/angular/src/app/tenant/partials/profile-page-1.tpl.html
@@ -107,63 +107,6 @@
 
 </fieldset>
 
-<fieldset>
-    <legend>Prior Address</legend>
-    <p><small>If less than 2 years at current address</small></p>
-
-    <div class="row">
-        
-       <div class="col-sm-6">
-           <div class="form-group">
-               <label class="col-sm-4 control-label">Street</label>
-               <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.street">
-               </div>
-           </div>
-       </div>
-       <div class="col-sm-6">
-           <div class="form-group">
-               <label class="col-sm-4 control-label">Apt. number</label>
-               <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.aptNumber">
-               </div>
-           </div>
-       </div>
-
-    </div>
-
-    <div class="row">
-       <div class="col-sm-6">
-           <div class="form-group">
-               <label class="col-sm-4 control-label">City</label>
-               <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.city">
-               </div>
-           </div>
-       </div>
-       <div class="col-sm-6">
-           <div class="form-group">
-               <label class="col-sm-4 control-label">State</label>
-               <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.state" typeahead="state for state in states | filter:$viewValue | limitTo:8" ng-pattern="{{statesPattern}}">
-               </div>
-           </div>
-       </div>
-    </div>
-
-    <div class="row">
-       <div class="col-sm-6">
-           <div class="form-group">
-               <label class="col-sm-4 control-label">Zip</label>
-               <div class="col-sm-8">
-                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.zip" ng-pattern="/[0-9]{5}/" maxlength="5">
-               </div>
-           </div>
-       </div>
-    </div>
-
-</fieldset>
-
 <fieldset class="fieldset-required">
    <legend>Move-In Information</legend>
 
@@ -289,6 +232,29 @@
            </div>
        </div-->
    </div>
+    
+   <div class="row">
+       <div class="col-sm-6">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Occupation</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.jobTitle"  required>
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-6">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Company</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.company"  required>
+               </div>
+           </div>
+       </div>
+   <!--div class="col-sm-6">
+        <button class="btn btn-rented">CONNECT <strong>LINKEDIN</strong></button>
+   </div-->
+   </div>
+    
    <div class="row">
        <div class="col-sm-6">
            <div class="form-group">
@@ -325,4 +291,284 @@
        </div>
    </div>
 
+</fieldset>
+
+<fieldset class="fieldset-required">
+   <legend>References</legend>
+
+   <div class="row">
+       <div class="col-sm-12">
+           <div class="form-group">
+               <label class="col-sm-12 control-label">Current Owner or Property Manager</label>
+           </div>
+       </div>
+   </div>
+   <div class="row">
+       <div class="col-sm-4">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Name</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.currentOwner.name" required>
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-4">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Phone</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="tel" ng-model="profile.currentOwner.phone" ui-mask="999.999.9999" required>
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-4">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">E-mail</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="email" ng-model="profile.currentOwner.email">
+               </div>
+           </div>
+       </div>
+   </div>
+   
+   <div class="row">
+       <div class="col-sm-12">
+           <div class="form-group">
+               <label class="col-sm-12 control-label">Past Owner or Property Manager</label>
+           </div>
+       </div>
+   </div>
+   <div class="row">
+       <div class="col-sm-4">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Name</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.pastOwner.name">
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-4">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Phone</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="tel" ng-model="profile.pastOwner.phone" ui-mask="999.999.9999">
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-4">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">E-mail</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="email" ng-model="profile.pastOwner.email">
+               </div>
+           </div>
+       </div>
+   </div>
+   
+   <div class="row">
+       <div class="col-sm-12">
+           <div class="form-group">
+               <label class="col-sm-12 control-label">Personal Reference</label>
+           </div>
+       </div>
+   </div>
+   <div class="row">
+       <div class="col-sm-4">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Name</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.personal.name">
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-4">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Phone</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="tel" ng-model="profile.personal.phone" ui-mask="999.999.9999">
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-4">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">E-mail</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="email" ng-model="profile.personal.email" >
+               </div>
+           </div>
+       </div>
+   </div>
+   
+</fieldset>
+
+<fieldset>
+    <legend>Prior Address</legend>
+    <p><small>If less than 2 years at current address</small></p>
+
+    <div class="row">
+        
+       <div class="col-sm-6">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Street</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.street">
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-6">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Apt. number</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.aptNumber">
+               </div>
+           </div>
+       </div>
+
+    </div>
+
+    <div class="row">
+       <div class="col-sm-6">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">City</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.city">
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-6">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">State</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.state" typeahead="state for state in states | filter:$viewValue | limitTo:8" ng-pattern="{{statesPattern}}">
+               </div>
+           </div>
+       </div>
+    </div>
+
+    <div class="row">
+       <div class="col-sm-6">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Zip</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.priorAddress.zip" ng-pattern="/[0-9]{5}/" maxlength="5">
+               </div>
+           </div>
+       </div>
+    </div>
+
+</fieldset>
+
+<fieldset>
+   <legend>Vehicle Details</legend>
+
+   <div class="row">
+       <div class="col-sm-3">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Year</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle.year" ui-number-mask="0">
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-3">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Make</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle.make">
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-3">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Model</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle.model">
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-3">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">License</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle.license">
+               </div>
+           </div>
+       </div>
+   </div>
+    
+    <div class="row">
+       <div class="col-sm-3">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Year</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle2.year" ui-number-mask="0">
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-3">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Make</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle2.make">
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-3">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">Model</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle2.model">
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-3">
+           <div class="form-group">
+               <label class="col-sm-4 control-label">License</label>
+               <div class="col-sm-8">
+                  <input class="form-control input-lg" type="text" ng-model="profile.vehicle2.license">
+               </div> 
+           </div>
+       </div>
+   </div>
+
+</fieldset>
+
+<fieldset>
+   <legend>Change Password</legend>
+
+    <p class="text-lg bottom-buffer">Please leave those fields blank if you don't intend to change your password</p>
+
+    <div class="row">
+
+       <div class="col-sm-6">
+           <div class="form-group">
+               <label class="col-sm-5 control-label">Old Password</label>
+               <div class="col-sm-7">
+                  <input class="form-control input-lg" type="password" ng-model="password.old" ng-required="password.change">
+                  <p class="help-block">Or temporary</p>
+               </div>
+           </div>
+       </div>
+
+    </div>
+
+    <div class="row">
+
+       <div class="col-sm-6">
+           <div class="form-group">
+               <label class="col-sm-5 control-label">New Password</label>
+               <div class="col-sm-7">
+                  <input class="form-control input-lg" type="password" ng-model="password.change" ng-minlength="8">
+               </div>
+           </div>
+       </div>
+       <div class="col-sm-6">
+           <div class="form-group">
+               <label class="col-sm-5 control-label">Confirm</label>
+               <div class="col-sm-7">
+                  <input class="form-control input-lg" type="password" ng-model="password.confirmChange" ng-minlength="8" ng-required="password.change">
+               </div>
+           </div>
+       </div>
+
+    </div>
 </fieldset>
