--- a/angular/src/app/tenant/partials/profile.tpl.html
+++ b/angular/src/app/tenant/partials/profile.tpl.html
@@ -2,8 +2,8 @@
 
         <div class="buttons">
            <button type="button" class="btn btn-rented right-buffer" ng-click="save(profile,password)">Save</button>
-           <a ng-click="page=1" class="prev" ng-class="{ active: page==1 }">1</a>
-           <a ng-click="page=2" class="next" ng-class="{ active: page==2 }">2</a>
+           <!--a ng-click="page=1" class="prev" ng-class="{ active: page==1 }">1</a>
+           <a ng-click="page=2" class="next" ng-class="{ active: page==2 }">2</a-->
         </div>
 
         <h1 ng-hide="onBoarding">My Profile {{page==2 ? 'Cont' : ''}}</h1>
@@ -12,8 +12,8 @@
         <div ng-include="'tenant/partials/profile-page-1.tpl.html'" ng-show="page==1">
         </div>
 
-        <div ng-include="'tenant/partials/profile-page-2.tpl.html'" ng-show="page==2">
-        </div>
+        <!--div ng-include="'tenant/partials/profile-page-2.tpl.html'" ng-show="page==2">
+        </div-->
         
         <div class="buttons">
            <button type="button" class="btn btn-rented right-buffer" ng-click="save(profile,password)">Save</button>
