--- a/angular/src/app/property/partials/bid.tpl.html
+++ b/angular/src/app/property/partials/bid.tpl.html
@@ -1,8 +1,9 @@
-<h5>Make An Offer</h5>
-
 <p class="badge top-buffer-sm" style="font-size: 18px; background-color: #666666; line-height: 2;" ng-show="property.bestOffer.accepted&&!property.tenant">Rental Pending</p>
 <p class="badge top-buffer-sm" style="font-size: 18px; background-color: #51b65b; line-height: 2;" ng-show="property.tenant">Rented</p>
 <p class="badge top-buffer-sm" style="font-size: 18px; background-color: #ff503f; line-height: 2;" ng-show="!property.tenant&&property.disabled">Unavailable</p>
+<p class="badge top-buffer-sm" style="font-size: 18px; background-color: #89d4cd; line-height: 2;" ng-show="!property.tenant&&!property.bestOffer.accepted">Available</p>
+
+<h5 ng-hide="property.bestOffer.accepted||property.disabled" class="top-buffer">Make An Offer</h5>
 
 <form ng-hide="property.bestOffer.accepted||property.disabled" method="post" class="form-horizontal" ng-submit="makeAnOffer(bid,property)" ng-controller="TenantBidCtrl" ng-show="gotProfile">
     <div class="form-group">
