--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -37,7 +37,7 @@
         <div class="row col-sm-12">
             <table class="table table-bordered table-condensed" style="width:100%">
                 <tr>
-                    <td><input class="form-control input-lg" type="text" value="http://rented.co/#/property/{{property.$id}}" disabled></td>
+                    <td><input class="form-control input-lg" type="text" value="http://rented.co/#/property/{{property.$id}}" ></td>
                 </tr>
             </table>
         </div>
