always fetch all bids in a property (we want to know how many they are), but only fetch bids details of the top N bids

--- a/angular/src/app/property/partials/offers.tpl.html
+++ b/angular/src/app/property/partials/offers.tpl.html
@@ -9,7 +9,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="bid in property.bids | loadBid">
+    <tr ng-repeat="bid in property.bids | loadBid:3">
       <td>{{bid.rentAmount | currency:"$" }}</td>
       <td>{{bid.moveInDate | date:'MM/dd/yyyy' | nvl}}</td>
       <td>{{bid.leaseTerm}} months</td>
