--- a/angular/src/app/nav/partials/nav.tpl.html
+++ b/angular/src/app/nav/partials/nav.tpl.html
@@ -16,10 +16,9 @@
         <li ng-show-auth="['logout','error']"><a ng-class="isActive('/register')" href="#/register">Register</a>
         </li>
         <li class="menuparent" ng-show-auth="'login'">
-               <a class="nav-user" href="#/{{profile.type}}s/profile" style="padding-top: 16px">
+               <a class="nav-user" href="#/{{profile.type}}s/profile" style="padding-top: 17px">
                    <img style="height: 34px; width: auto;" ng-src="{{profile.picture || 'assets/img/avatar-small.png'}}" class="img-circle">
-                   {{profile.firstName}} {{profile.lastName}}
-               </a>
+                   {{profile.firstName}} {{profile.lastName}}</a>
         </li>
         <li ng-show-auth="'login'"><a href="#/logout">Sign Out</a>
         </li>
