--- a/angular/src/app/owner/property-status.tpl.html
+++ b/angular/src/app/owner/property-status.tpl.html
@@ -28,7 +28,7 @@
 <div class="container">
 
     <div class="row bottom-buffer-lg">
-        <div class="col-sm-4 top-buffer" ng-repeat="bid in property.bids | loadBid" ng-class="{ 'opac': property.bestOffer.accepted&&property.bestOffer.$id!=bid.$id }">
+        <div class="col-sm-4 vertical-buffer" ng-repeat="bid in property.bids | loadBid" ng-class="{ 'opac': property.bestOffer.accepted&&property.bestOffer.$id!=bid.$id }">
             <div class="row">
               <div class="col-sm-3">
                  <img ng-src="{{bid.user.picture || 'assets/img/avatar.png'}}" class="img-circle img-responsive">
@@ -44,15 +44,17 @@
                 </p>
               </div>
             </div>
-            <div class="row top-buffer-sm">
+            <div class="row top-buffer-sm col-sm-12">
                 <button class="btn btn-rented" ng-click="acceptOffer(bid,property)" ng-hide="bid.accepted || property.bestOffer.accepted">Accept</button>
                 <button class="btn btn-rented" ng-click="cancelOffer(bid,property)" ng-show="bid.accepted&&!property.tenant">Cancel Offer</button>
-                <button class="btn btn-rented" ng-click="bidDetails(bid,property)">See More</button>
+                <button class="btn btn-rented" ng-click="bidDetails(bid,property)">View Profile</button>
             </div>
-            <div class="row top-buffer-sm" ng-hide="property.bestOffer.accepted&&property.bestOffer.$id!=bid.$id">
-                <!--button class="btn btn-rented" ng-hide="property.bestOffer.accepted">Counter Offer</button-->
-                <button class="btn btn-rented" ng-click="tenantMoveIn(bid.user,property)" ng-show="property.bestOffer.accepted&&!property.tenant">Tenant Move-In</button>
-                <button class="btn btn-rented" ng-click="cancelMoveIn(bid.user,property)" ng-show="property.bestOffer.accepted&&property.tenant">Cancel Move-In</button>
+            <div class="row" ng-show="property.bestOffer.accepted" >
+                <div class="col-sm-12 top-buffer-sm" style="min-height: 39px">
+                    <!--button class="btn btn-rented" ng-hide="property.bestOffer.accepted">Counter Offer</button-->
+                    <button class="btn btn-rented" ng-click="tenantMoveIn(bid.user,property)" ng-show="property.bestOffer.accepted&&!property.tenant&&property.bestOffer.$id==bid.$id">Move-In Tenant</button>
+                    <button class="btn btn-rented" ng-click="cancelMoveIn(bid.user,property)" ng-show="property.bestOffer.accepted&&property.tenant&&property.bestOffer.$id!==bid.$id">Cancel Move-In</button>
+                </div>
             </div>
         </div>
     </div>
