Several tenant, owner, and property changes
- Changed “See More” to “View Property”
- Removed words “Your offer will still be submitted”
- Add “Profile Saved!” shout.content near the bottom save button for
tenant and owner
- Added “Please apply to a property.” if no offers made
- Changed property available color to #5fbc69
- Changed “rented” color to #89d4cd and text color to black
- Added a “Next” for tenant profile to credit check

--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -370,6 +370,7 @@
                 <div class="buttons">
                     <button type="button" class="btn btn-rented" style="margin-right: 10px" ng-click="save(property)">Save</button>
                 </div>
+                <div class="alert alert-{{shout.type}} text-center" ng-show="shout.content">{{shout.content}}</div>
             </div>
         </div>
         
