--- a/angular/src/app/tenant/partials/profile.tpl.html
+++ b/angular/src/app/tenant/partials/profile.tpl.html
@@ -2,6 +2,7 @@
 
         <div class="buttons">
            <button type="button" class="btn btn-rented right-buffer" ng-click="save(profile,password)">Save</button>
+            <a href="#/tenants/myprofile/2" class="next" style="padding-left: 20px;">Next</a>
            <!--a ng-click="page=1" class="prev" ng-class="{ active: page==1 }">1</a>
            <a ng-click="page=2" class="next" ng-class="{ active: page==2 }">2</a-->
         </div>
@@ -18,6 +19,8 @@
         <div class="buttons">
            <button type="button" class="btn btn-rented right-buffer" ng-click="save(profile,password)">Save</button>
         </div>
+        
+        <div class="alert alert-{{shout.type}} text-center" ng-show="shout.content">{{shout.content}}</div>
 
     </form>
 
