Improved owner dashboard
- Same changes as tenant dashboard
- Added property status to owner dashboard
- Added “View Tenant(s)” button if a tenant is moved-in to a property

--- a/angular/src/app/owner/tenants.tpl.html
+++ b/angular/src/app/owner/tenants.tpl.html
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="col-sm-2 vcenter">
-            <button type="button" class="btn btn-rented" ng-click="tenantDetails(property)">See More</button>
+            <button type="button" class="btn btn-rented" ng-click="tenantDetails(property)">View Profile</button>
         </div>
     </div>
 
