--- a/angular/src/app/owner/dashboard.tpl.html
+++ b/angular/src/app/owner/dashboard.tpl.html
@@ -54,7 +54,8 @@
         <div class="col-sm-3" ng-repeat="property in properties | loadProperty:'':'lazy'" ng-show="property.address">
             <ng-include src="'owner/partials/property-teaser.tpl.html'"></ng-include>
             <a href="#/property/{{property.$id}}" class="btn btn-rented">View Property</a>
-            <a href="#/owners/properties/{{property.$id}}/status" class="btn btn-rented">View Offers</a>
+            <a href="#/owners/properties/{{property.$id}}/status" class="btn btn-rented" ng-hide="property.bestOffer.accepted&&property.tenant">View Offers</a>
+            <a href="#/owners/tenants" class="btn btn-rented" ng-show="property.bestOffer.accepted&&property.tenant">View Tenant(s)</a>
         </div>
     </div>
 
