Marketing message change
- Sign Up
- Sign In
- How It Works

--- a/angular/src/app/user/partials/registermodal.tpl.html
+++ b/angular/src/app/user/partials/registermodal.tpl.html
@@ -5,7 +5,7 @@
     <div class="modal-body">
         <ng-include src="'user/partials/registerform.tpl.html'"></ng-include>
         <p class="center">
-            Already have an account? <button ng-click="openLoginModal()">Login Here</button>
+            Already have an account? <button ng-click="openLoginModal()">Sign In Here</button>
         </p>
     </div>
 </div>
