--- a/angular/src/app/partials/home.tpl.html
+++ b/angular/src/app/partials/home.tpl.html
@@ -2,7 +2,9 @@
     <div class="container homepage-drawing">
         <div class="jumbotron" style="background-color: transparent; padding-left: 16px;">
            <h1>Rent Your Way</h1>
-           <h3><em>Private network for tenants and owners/managers</em></h3>
+           <h4><em>Private network for tenants and owners/managers</em></h4>
+           <h3><small>It's free to sign up and always will be</small></h3>
+            
            <div class="row" style="margin-top: 30px;">
               <div class="col-lg-4 col-sm-5">
                   <h3>Tenants</h3>
