--- a/angular/src/app/property/list.tpl.html
+++ b/angular/src/app/property/list.tpl.html
@@ -1,6 +1,6 @@
 <div class="content-header header-shadow property-list-header">
     <div class="container">
-        <h1>Take A Tour</h1> 
+        <h1>How It Works</h1> 
 
         <div class="row">
             <div class="col-sm-12">
@@ -36,7 +36,7 @@
                 </ul>
             </div>
 
-            <div class="row property-row" ng-repeat="(id, property) in properties | loadProperty" ng-show="property.pictures.length">
+            <div class="row property-row" ng-repeat="(id, property) in properties | loadProperty:'':'lazy'" ng-show="property.pictures.length">
                 <img ng-src="{{property.pictures[0]}}" class="col-md-7 col-xs-12 img-responsive">
                 <div class="col-md-5 col-xs-12">
                     <h3>
