--- a/angular/src/app/user/login.tpl.html
+++ b/angular/src/app/user/login.tpl.html
@@ -1,5 +1,5 @@
 <div class="container" ng-hide="profile">
-    <h1>Login</h1>
+    <h1>Sign In</h1>
 
     <div class="row">
         <div class="col-sm-7 center">
