--- a/angular/src/app/user/partials/loginmodal.tpl.html
+++ b/angular/src/app/user/partials/loginmodal.tpl.html
@@ -5,7 +5,7 @@
     <div class="modal-body">
         <ng-include src="'user/partials/loginform.tpl.html'"></ng-include>
         <p class="center">
-            Don't have an account? <button ng-click="openRegisterModal()">Register Here</button>
+            Don't have an account? <button ng-click="openRegisterModal()">Sign Up</button>
         </p>
     </div>
 </div>
