--- a/angular/src/app/user/register.tpl.html
+++ b/angular/src/app/user/register.tpl.html
@@ -1,10 +1,10 @@
 <div class="container" ng-hide="profile">
-    <h1>Register</h1>
-
+    <h1>Sign Up<br><small>It's free and always will be</small></h1>
+    
     <div class="row">
         <div class="col-lg-11 center">
             <ng-include src="'user/partials/registerform.tpl.html'"></ng-include>
-            <p class="bottom-buffer">Already registered? <a href="#/login">Login</a></p>
+            <p class="bottom-buffer">Already signed up? <a href="#/login">Sign In</a></p>
         </div>
     </div> <!-- /.row -->
 </div> <!-- /.container -->
