Added Angulartics Tracking
- Tracks each page visited and specific events

--- a/angular/src/app/partials/home.tpl.html
+++ b/angular/src/app/partials/home.tpl.html
@@ -8,11 +8,11 @@
            <div class="row" style="margin-top: 30px;">
               <div class="col-lg-4 col-sm-5">
                   <h3>Tenants</h3>
-                  <a href="#/register/tenant" class="btn btn-rented" role="button">Create Your  Profile</a>
+                  <a href="#/register/tenant" class="btn btn-rented" role="button" analytics-on analytics-event='Create-Profile'>Create Your  Profile</a>
               </div>   
               <div class="col-lg-3 col-sm-3">
                   <h3>Owners/Managers</h3>
-                  <a href="#/register/owner" class="btn btn-rented" role="button">Add Your Property</a>
+                  <a href="#/register/owner" class="btn btn-rented" role="button" analytics-on analytics-event='Add-Property'>Add Your Property</a>
               </div>   
            </div>
         </div>
