--- a/angular/src/app/property/list.tpl.html
+++ b/angular/src/app/property/list.tpl.html
@@ -15,7 +15,7 @@
                 </div>
 
                 <div class="col-sm-7 col-xs-12">
-                    <youtube-video id="best-vid" video-id="rentedIntro"></youtube-video>
+                    <youtube-video id="best-vid" video-id="rentedIntro" analytics-on analytics-event="Play" analytics-category="Videos" analytics-label="Rented-Intro-Video"></youtube-video>
                 </div>
 
             </div>
