--- a/angular/src/app/owner/owners.tpl.html
+++ b/angular/src/app/owner/owners.tpl.html
@@ -20,7 +20,7 @@
 
             <div class="row vertical-buffer">
                     <div class="col-xs-12 text-center">
-                         <a href="#/register/owner" class="btn btn-rented" ng-hide="{{profile && profile.type == 'tenant'}}">Add Your Property for Free</a>
+                         <a href="#/register/owner" class="btn btn-rented" ng-hide="{{profile && profile.type == 'tenant'}}" analytics-on analytics-event='Add-Property'>Add Your Property for Free</a>
                     </div>
             </div>
     </div>
