--- a/angular/src/app/tenant/tenants.tpl.html
+++ b/angular/src/app/tenant/tenants.tpl.html
@@ -19,7 +19,7 @@
             </div>
             <div class="row vertical-buffer">
                     <div class="col-xs-12 text-center">
-                         <a href="#/register/tenant" class="btn btn-rented" ng-hide="{{profile && profile.type == 'owner'}}">Create Your Free Profile</a>
+                         <a href="#/register/tenant" class="btn btn-rented" ng-hide="{{profile && profile.type == 'owner'}}" analytics-on analytics-event='Create-Profile'>Create Your Free Profile</a>
                     </div>
             </div>
     </div>
