Update on How It Works
- Added how to add a property
- Added how to apply online

--- a/angular/src/app/owner/partials/property-form.tpl.html
+++ b/angular/src/app/owner/partials/property-form.tpl.html
@@ -5,7 +5,9 @@
         <a href="#/owners/add-property/2" class="next" style="padding-left: 20px;">Next</a>
     </div>
 
-    <h1 style="margin-top: 0px;" ng-show="add">Property {{propertyNo}}</h1>
+    <h1 style="margin-top: 0px;" ng-show="add">Property {{propertyNo}}<br>
+    <small><a href="#/tour/howtoaddproperty">See how to add your property</a></small>
+    </h1>
 
     <div class="content-header" ng-hide="add">
         <div class="row" style="min-height: 210px;">
