--- a/angular/src/app/owner/partials/ready-to-qualify.tpl.html
+++ b/angular/src/app/owner/partials/ready-to-qualify.tpl.html
@@ -1,6 +1,6 @@
 <div class="vertical-buffer-xl">
 
-    <div class="row text-center" style="position: relative; margin-bottom: 80px;">
+    <div class="row text-center" style="position: relative; margin-bottom: 60px;">
         <h1>Qualify Tenants</h1>
     </div>
 
@@ -14,11 +14,12 @@
             </div><!-- /input-group --> 
         </li>
         <li>
-            <a href="http://www.craigslist.org/about/sites#US" class="next" target="_blank">Post on Craigslist</a>
+            <a href="http://craigslist.org" class="next" target="_blank">Post on Craigslist</a>
+            <a href="https://postlets.com/" class="next left-buffer" target="_blank">Post on Postlets</a>
             <div class="vertical-buffer">
                 <table class="table table-bordered table-condensed" style="width:100%">
                     <tr>
-                        <td><input class="form-control input-lg" type="text" value="http://rented.co/#/property/{{addedPropertyId}}" disabled></td>
+                        <td><input class="form-control input-lg" type="text" value="http://rented.co/#/property/{{addedPropertyId}}" ></td>
                     </tr>
                     <tr>
                         <td><h6>Copy and past the link above into your Craigslist Ad</h6></td>
