--- a/angular/src/app/property/list.tpl.html
+++ b/angular/src/app/property/list.tpl.html
@@ -1,5 +1,6 @@
 <div class="content-header header-shadow property-list-header">
     <div class="container">
+
         <h1>How It Works</h1> 
 
         <div class="row">
@@ -8,9 +9,17 @@
                 
                 <div class="col-sm-5 col-xs-12">
                     <ul>
-                        <li>Tenant(s) make offer online</li>
-                        <li>Owner accepts offer &amp; property is Rental Pending</li>
-                        <li>Lease is signed &amp; property is Rented</li>
+                        <li>Owners add a property &amp; advertise online via their favorite search portal
+                            <ul>
+                               <li><em><small><a href="#/tour/howtoaddproperty">See how to add your property</a></small></em></li>
+                           </ul>                            
+                        </li>
+                        <li>Tenant(s) submit online application
+                            <ul>
+                               <li><em><small><a href="#/tour/howtoapply">See how to apply online</a></small></em></li>
+                           </ul>                            
+                        </li>
+                        <li>Owner accepts offer &amp; property is Rented</li>
                     </ul>
                 </div>
 
