--- a/angular/src/app/owner/owners.tpl.html
+++ b/angular/src/app/owner/owners.tpl.html
@@ -83,7 +83,7 @@
                        <li>Pool of pre-qualified tenants
                            <ul class="col-xs-12 list-unstyled bottom-buffer">
                                <li><em><small>Tenants fill out one application &amp; credit report</small></em></li>
-                               <li><em><small>View tenant credit report and application as soon as they make an offer</small></em></li>
+                               <li><em><small>View tenant credit report and application as soon as they apply</small></em></li>
                                <li><em><small>Tenants can apply before or after they view the property</small></em></li>
                            </ul>    
                        </li>
