--- a/angular/src/app/property/partials/howtoapply.tpl.html
+++ b/angular/src/app/property/partials/howtoapply.tpl.html
@@ -10,12 +10,12 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h4>1. Create your profile</h4>
+                <h4>1. Create your profile (online application)</h4>
                 <div class="row">
                     <img src="assets/img/features/tenants/createprofile.png" class="col-sm-7 col-xs-12 img-responsive">
                     <ul class="col-sm-5 col-xs-12 list-unstyled">
                        <li>Include your contact, address, and move-in information</li>
-                       <li>You will only fill this information once for all properties</li>
+                       <li>One application works for all properties</li>
                     </ul>
                 </div>
             </div>
