Updated search portal to search site

--- a/angular/src/app/property/partials/howtoaddproperty.tpl.html
+++ b/angular/src/app/property/partials/howtoaddproperty.tpl.html
@@ -46,7 +46,7 @@
                 <div class="row">
                     <img src="assets/img/features/owners/advertise.png" class="col-sm-7 col-xs-12 img-responsive">
                     <ul class="col-sm-5 col-xs-12 list-unstyled">
-                       <li>Include the property link in the description</li>
+                       <li>Include the property link when advertising on a search site (Craigslist, Lovely, etc.)</li>
                        <li>Tenants can be asked to apply before or after they view the property</li>
                        <li>Compare applications side-by-side online!</li>
                     </ul>
