--- a/angular/src/app/property/partials/howtoapply.tpl.html
+++ b/angular/src/app/property/partials/howtoapply.tpl.html
@@ -31,7 +31,7 @@
                 <div class="row">
                     <img src="assets/img/features/tenants/apply.png" class="col-sm-7 col-xs-12 img-responsive">
                     <ul class="col-sm-5 col-xs-12 list-unstyled">
-                       <li>Find your property from your favorite search portal or invite an owner</li>
+                       <li>Find your property from your favorite search site (Craigslist, Lovely, etc.) or invite an owner</li>
                        <li>Share your desired move-in date and lease length</li>
                        <li>Press Apply and your application is submitted!</li>
                     </ul>
