Updated Privacy and Terms
- Oct. 2014 Privacy Policy
- Added checkbox that explicitly asks the user that they agree to the
privacy policy and terms of use
- Oct. 2014 Terms

--- a/angular/src/app/user/partials/registerform.tpl.html
+++ b/angular/src/app/user/partials/registerform.tpl.html
@@ -50,14 +50,14 @@
                 </div>
         </div>
     </div>
-    <div class="row" style="margin-top: 55px;">
+    <div class="row top-buffer" style="">
         <div class="col-sm-12" style="text-align: center;">
-            <p class="small">By Registering in to the System you Agree to the <a href="#/terms">Terms of Use</a> and <a href="#/privacy-policy">Privacy Policy</a>.</p>
+            <p class="small"><input type="checkbox" ng-model="data.termsagreed" required>&nbsp;&nbsp;By signing-up you agree to the <a href="#/terms">Terms of Use</a> and <a href="#/privacy-policy">Privacy Policy</a>.</p>
         </div>
     </div>
-    <div class="row" style="padding-bottom: 50px;">
+    <div class="row vertical-buffer" style="">
         <div class="col-xs-3 center text-center">
-            <input type="submit" value="Register" class="btn btn-rented">
+            <input type="submit" value="Sign Up" class="btn btn-rented">
         </div>
     </div>
 </form>
